fixed offset on mobile and other random stuff

--- a/src/components/Gallery/gallery.css
+++ b/src/components/Gallery/gallery.css
@@ -1,5 +1,4 @@
 #myImg {
-    border-radius: 0px;
     cursor: pointer;
     transition: 0.3s;
   }
@@ -33,9 +32,11 @@
   
   .modal-content {
     margin: auto;
+    padding-top: 2%;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    width: 100%;
+    max-width: 50%;
+    /* border-radius: 20px; */
   }
   
   #caption {
